<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.salesforce.cqe</groupId>
  <artifactId>drillbit-cli</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>drillbit-cli</name>
  <url>http://maven.apache.org</url>

  <properties>
    <assertj.version>3.2.0</assertj.version>
    <cglib-nodep.version>3.2.5</cglib-nodep.version>
    <dsl.version>1.70</dsl.version>
    <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
    <java.version>1.8</java.version>
    <junit.version>4.12</junit.version>
    <maven-dependency-plugin.version>3.0.0</maven-dependency-plugin.version>
    <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
    <mockito.groovy.support.version>1.3</mockito.groovy.support.version>
    <!-- Can't use mockito 1.10.9+ due to this:
        https://github.com/cyrusinnovation/mockito-groovy-support/issues/13-->
    <mockito.version>1.10.8</mockito.version>
    <jackson-databind.version>2.12.2</jackson-databind.version>
    <apache.httpclient.version>4.5.13</apache.httpclient.version>
    <org.json.version>20210307</org.json.version>
    <google.guava.version>30.1.1-jre</google.guava.version>
    <java-keyring.version>1.0.0</java-keyring.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>


  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>1.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
    <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>2.3.1</version>
    </dependency>
    <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>${apache.httpclient.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>${org.json.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
    <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${google.guava.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/net.east301/java-keyring -->
    <dependency>
        <groupId>net.east301</groupId>
        <artifactId>java-keyring</artifactId>
        <version>${java-keyring.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>3.11.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
        </configuration>
    </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
            <reportNameSuffix>junit</reportNameSuffix>
            <properties>
                <property>
                    <name>junit</name>
                    <value>false</value>
                </property>
            </properties>
            <threadCount>1</threadCount>
        </configuration>
        <dependencies>
            <dependency>
                <groupId>org.apache.maven.surefire</groupId>
                <artifactId>surefire-junit47</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <configuration>
          <excludes>
            <exclude>**/datamodel/junit/*</exclude>
            <exclude>**/datamodel/testng/*</exclude>
        </excludes>
        </configuration>
        <executions>
            <execution>
                <id>pre-unit-test</id>
                <goals>
                    <goal>prepare-agent</goal>
                </goals>
            </execution>
            <execution>
                <id>post-unit-test</id>
                <goals>
                    <goal>report</goal>
                </goals>
                <phase>test</phase>
            </execution>
        </executions>
      </plugin>
    </plugins>

  </build>
</project>
